<resources>
    <string name="app_name">Talent Viewer</string>

    <string name="content_description" translatable="false">Content Description Content Description</string>
    <string name="content_description_empty" translatable="false"> </string>

    <string name="main_activity_search_hint">Search</string>
    <string name="main_activity_button_bios_name">Bios</string>
    <string name="main_activity_button_jobs_name">Jobs</string>

    <string name="error_loading">Error loading data from API server</string>
    <string name="error_loading_opportunities">Error loading opportunities from API server</string>
    <string name="error_loading_job">Error loading this job from API server</string>
    <string name="error_loading_peoples">Error loading peoples from API server</string>
    <string name="error_loading_bio">Error loading this bio from API server</string>
    <string name="error_wrong_link">Error: Wrong link</string>
    <string name="error_you_are_in_job">You are already in Jobs</string>
    <string name="error_you_are_in_bio">You are already in Bios</string>

    <string name="card_compensation_hidden">Compensation Hidden</string>

    <!--    Detailed View-->
    <string name="detail_details">Details</string>
    <string name="detail_strengths">Requirements</string>
    <string name="detail_languages">Languages</string>
    <string name="detail_others">Others</string>
    <string name="detail_remote">Remote Work</string>
    <string name="detail_summaryOfBio">Summary</string>
    <string name="detail_contact">Links</string>
    <string name="detail_strengths_bio">Strengths</string>
    <string name="detail_interests">Interests</string>
    <string name="detail_jobs">Jobs</string>
    <string name="detail_jobs_name">Position</string>
    <string name="detail_jobs_organizations">Organizations</string>
    <string name="detail_jobs_responsibilities">Responsibilities</string>
    <string name="detail_jobs_from">From</string>
    <string name="detail_jobs_to">To</string>
    <string name="detail_languages_null">Unknown</string>
    <string name="detail_personality_traits_results">Personal Traits</string>
    <string-array name="detail_personality_traits_side_start">
        <item>Solitary Reserved</item>
        <item>Consistent Cautious</item>
        <item>Easy-going Spontaneous</item>
        <item>Competitive Argumentative</item>
        <item>Sly Avid</item>
        <item>Secure Confident</item>
    </string-array>
    <string-array name="detail_personality_traits_side_end">
        <item>Outgoing Energetic</item>
        <item>Inventive Curious</item>
        <item>Efficient Organized</item>
        <item>Friendly Compassionate</item>
        <item>Sincere Modest</item>
        <item>Sensitive Nervous</item>
    </string-array>
    <string name="detail_personality_traits_analysis">Analysis</string>

    <!--    Search View-->
    <string-array name="search_view_helper_bios">
        <item>name</item>
        <item>role</item>
        <item>username</item>
    </string-array>
    <string-array name="search_view_helper_jobs">
        <item>objective</item>
        <item>company</item>
        <item>skill</item>
    </string-array>
    <string name="search_view_helper_message">Click to add -></string>

    <!--    Ads View-->
    <string name="ads_banner" translatable="false">ca-app-pub-2321980263900338/1599942696</string>
    <string name="ads_interstitial" translatable="false">ca-app-pub-2321980263900338/6684748418</string>

    <!--    Menu-->
    <string name="item_policy">Privacy Policy</string>
    <string name="item_policy_page" translatable="false">https://docs.google.com/document/d/1jO9nnmsjG2ZO0Si1rEBTAP2kmTin5h-qIb4nhuAN5H0/edit?usp=sharing</string>
    <string name="item_rate">Rate this app</string>
    <string name="item_about">About</string>
    <string name="item_rate_success">Thanks for your review</string>
    <string name="item_rate_fail">Error rating this app</string>

    <!--    Author Menu-->
    <string name="authorName1" translatable="false">Julio César Alberto</string>
    <string name="authorName2" translatable="false">León Anhuamán</string>
    <string name="authorProfession" translatable="false">Android Developer - UI/UX Designer</string>
    <string name="authorEmail" translatable="false">julioleon2004@gmail.com</string>
    <string name="authorEmailBody">Write your comment here</string>
    <string name="authorEmailSubject">User Comment</string>
    <string name="authorEmailChooser">Send email to this author using:</string>
    <string name="authorPhone" translatable="false">+58 (424) 225.92.20</string>
    <string name="poweredBy">Supported by:</string>
    <string name="poweredByName" translatable="false">torre.co</string>
    <string name="poweredByUrl" translatable="false">https://torre.co/</string>

</resources>