<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/hamburger_list_menu"
        android:orderInCategory="101"
        android:title="@string/app_name"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/item_policy"
                android:icon="@drawable/ic_privacy_icon"
                android:orderInCategory="100"
                android:title="@string/item_policy"
                app:showAsAction="ifRoom|withText" />
            <item
                android:id="@+id/item_rate"
                android:icon="@drawable/ic_rate_review_icon"
                android:orderInCategory="100"
                android:title="@string/item_rate"
                app:showAsAction="ifRoom|withText" />
            <item
                android:id="@+id/item_about"
                android:icon="@drawable/ic_about_icon"
                android:orderInCategory="100"
                android:title="@string/item_about"
                app:showAsAction="ifRoom|withText" />
        </menu>
    </item>
</menu>