<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activities"
    tools:context=".views.MainActivity">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_white_gray_border"
        android:inputType="textNoSuggestions"
        android:queryHint="@string/main_activity_search_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_bios"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_jobs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

    </androidx.recyclerview.widget.RecyclerView>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_recycler_view_invisibility"
        app:layout_constraintBottom_toTopOf="@id/bios_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bios_button"
        style="@style/footer_text_bold"
        android:layout_marginBottom="16dp"
        android:text="@string/main_activity_button_bios_name"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".15"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/jobs_button"
        style="@style/footer_text_bold"
        android:layout_marginBottom="16dp"
        android:text="@string/main_activity_button_jobs_name"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".85"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/bios_loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/content_description"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view_bios"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view_bios"
        app:srcCompat="@drawable/ic_loading" />

    <ImageView
        android:id="@+id/jobs_loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/content_description"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/recycler_view_jobs"
        app:layout_constraintEnd_toEndOf="@id/recycler_view_jobs"
        app:srcCompat="@drawable/ic_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>