<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activities"
    tools:context=".views.JobActivity">

    <developer.shivam.crescento.CrescentoContainer
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/picture_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background_1" />

    </developer.shivam.crescento.CrescentoContainer>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35" />

    <com.pkmmte.view.CircularImageView
        android:id="@+id/picture"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:src="@android:mipmap/sym_def_app_icon"
        app:border="true"
        app:border_color="@color/white_torre"
        app:border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/picture"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/apply_now_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:backgroundTint="@color/gray_torre_00"
            app:cornerRadius="50dp"
            app:icon="@drawable/ic_floatingarrow"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="50dp"
            app:iconTint="@color/gray_torre_00"
            app:iconTintMode="screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/text_container"
        style="@style/detail_text_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picture">

        <TextView
            android:id="@+id/objective"
            style="@style/detail_text_bold" />

        <TextView
            android:id="@+id/organizationsName"
            style="@style/detail_text_normal" />

        <TextView
            android:id="@+id/compensation"
            style="@style/detail_text_normal" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        style="@style/detail_scrollview_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_container">

        <LinearLayout
            android:id="@+id/data_shower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <ImageView
        android:id="@+id/loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_loading" />

    <FrameLayout
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/author"
        style="@style/authorBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/authorId"
            style="@style/authorCardBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".3">

            <ImageView
                android:id="@+id/imageView"
                style="@style/authorImageView"
                android:contentDescription="@string/content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/authorTextView1"
                    style="@style/authorTextView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/authorName1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/authorTextView2"
                    style="@style/authorTextView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/authorName2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/authorTextView1" />

                <TextView
                    android:id="@+id/authorTextView3"
                    style="@style/authorTextView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/authorProfession"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/authorTextView2" />

                <TextView
                    android:id="@+id/authorTextView4"
                    style="@style/authorTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authorEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/authorTextView3" />

                <TextView
                    android:id="@+id/authorTextView5"
                    style="@style/authorTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authorPhone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/authorTextView4" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/poweredId"
            style="@style/authorCardBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authorId"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/authorTextView6"
                style="@style/authorTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poweredBy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/authorTextView7"
                style="@style/authorTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poweredByName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorTextView6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>